tests/machine/x/cpp/group_by_left_join.error
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:25: error: no match for ‘operator==’ (operand types are ‘std::any’ and ‘std::__cxx11::basic_string<char>’)
   68 |             if (__g.key == __key) {
      |                 ~~~~~~~ ^~ ~~~~~
      |                     |      |
      |                     |      std::__cxx11::basic_string<char>
      |                     std::any
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:3:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘const std::__new_allocator<_Tp>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::fpos<_StateT>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::allocator<_CharT>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
In file included from /usr/include/c++/13/string:48:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/string:51:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::pair<_T1, _T2>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   mismatched types ‘const _CharT*’ and ‘std::any’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::tuple<_UTypes ...>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::istreambuf_iterator<_CharT, _Traits>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:5:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:68:28: note:   ‘std::any’ is not derived from ‘const std::vector<_Tp, _Alloc>’
   68 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:25: error: no match for ‘operator==’ (operand types are ‘std::any’ and ‘std::__cxx11::basic_string<char>’)
   83 |             if (__g.key == __key) {
      |                 ~~~~~~~ ^~ ~~~~~
      |                     |      |
      |                     |      std::__cxx11::basic_string<char>
      |                     std::any
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘const std::__new_allocator<_Tp>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::fpos<_StateT>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::allocator<_CharT>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::pair<_T1, _T2>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   mismatched types ‘const _CharT*’ and ‘std::any’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::tuple<_UTypes ...>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::istreambuf_iterator<_CharT, _Traits>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:83:28: note:   ‘std::any’ is not derived from ‘const std::vector<_Tp, _Alloc>’
   83 |             if (__g.key == __key) {
      |                            ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:100:51: error: no match for ‘operator!’ (operand type is ‘std::any’)
  100 |                                               if (!(r.o))
      |                                                   ^~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:100:51: note: candidate: ‘operator!(bool)’ (built-in)
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:100:51: note:   no known conversion for argument 1 from ‘std::any’ to ‘bool’
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:109:5: error: conversion from ‘vector<__struct5>’ to non-scalar type ‘vector<Stat>’ requested
   56 |   std::vector<Stat> stats = ([&]() {
      |                             ~~~~~~~~
   57 |     std::vector<__struct4> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   58 |     for (auto c : customers) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
   59 |       {
      |       ~
   60 |         bool __matched0 = false;
      |         ~~~~~~~~~~~~~~~~~~~~~~~~
   61 |         for (auto o : orders) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
   62 |           if (!((o.customerId == c.id)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   63 |             continue;
      |             ~~~~~~~~~
   64 |           __matched0 = true;
      |           ~~~~~~~~~~~~~~~~~~
   65 |           auto __key = c.name;
      |           ~~~~~~~~~~~~~~~~~~~~
   66 |           bool __found = false;
      |           ~~~~~~~~~~~~~~~~~~~~~
   67 |           for (auto &__g : __groups) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   68 |             if (__g.key == __key) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~
   69 |               __g.items.push_back(Stat{c, o});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   70 |               __found = true;
      |               ~~~~~~~~~~~~~~~
   71 |               break;
      |               ~~~~~~
   72 |             }
      |             ~
   73 |           }
      |           ~
   74 |           if (!__found) {
      |           ~~~~~~~~~~~~~~~
   75 |             __groups.push_back(__struct4{__key, std::vector<Stat>{Stat{c, o}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   76 |           }
      |           ~
   77 |         }
      |         ~
   78 |         if (!__matched0) {
      |         ~~~~~~~~~~~~~~~~~~
   79 |           auto o = std::decay_t<decltype(*(orders).begin())>{};
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   80 |           auto __key = c.name;
      |           ~~~~~~~~~~~~~~~~~~~~
   81 |           bool __found = false;
      |           ~~~~~~~~~~~~~~~~~~~~~
   82 |           for (auto &__g : __groups) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   83 |             if (__g.key == __key) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~
   84 |               __g.items.push_back(Stat{c, o});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   85 |               __found = true;
      |               ~~~~~~~~~~~~~~~
   86 |               break;
      |               ~~~~~~
   87 |             }
      |             ~
   88 |           }
      |           ~
   89 |           if (!__found) {
      |           ~~~~~~~~~~~~~~~
   90 |             __groups.push_back(__struct4{__key, std::vector<Stat>{Stat{c, o}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   91 |           }
      |           ~
   92 |         }
      |         ~
   93 |       }
      |       ~
   94 |     }
      |     ~
   95 |     std::vector<__struct5> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   96 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
   97 |       __items.push_back(__struct5{g.key, ((int)([&]() {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   98 |                                             std::vector<Stat> __items;
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~
   99 |                                             for (auto r : g.items) {
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~
  100 |                                               if (!(r.o))
      |                                               ~~~~~~~~~~~
  101 |                                                 continue;
      |                                                 ~~~~~~~~~
  102 |                                               __items.push_back(r);
      |                                               ~~~~~~~~~~~~~~~~~~~~~
  103 |                                             }
      |                                             ~
  104 |                                             return __items;
      |                                             ~~~~~~~~~~~~~~~
  105 |                                           })()
      |                                           ~~~~
  106 |                                               .size())});
      |                                               ~~~~~~~~~~~
  107 |     }
      |     ~
  108 |     return __items;
      |     ~~~~~~~~~~~~~~~
  109 |   })();
      |   ~~^~
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:113:22: error: ‘struct Stat’ has no member named ‘name’
  113 |       std::cout << s.name;
      |                      ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by_left_join.cpp:117:22: error: ‘struct Stat’ has no member named ‘count’
  117 |       std::cout << s.count;
      |                      ^~~~~
